Preview of <picture> element doesn't match element bounds https://bugs.webkit.org/show_bug.cgi?id=199049 <rdar://problem/51474402>

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/text-indicator/text-indicator-uses-img-size-inside-picture.html

* dom/DOMRectReadOnly.idl:
* dom/Range.cpp:
(WebCore::Range::absoluteRectsForRangeInText const):
(WebCore::Range::absoluteTextRects const):
(WebCore::Range::borderAndTextRects const):
(WebCore::Range::boundingRect const):
(WebCore::Range::absoluteBoundingRect const):
* dom/Range.h:
(WebCore::Range::absoluteTextRects):
(WebCore::Range::absoluteBoundingRect):
(WebCore::Range::borderAndTextRects):
(WebCore::Range::boundingRect):
* page/TextIndicator.cpp:
(WebCore::absoluteBoundingRectForRange):
(WebCore::estimatedBackgroundColorForRange):
(WebCore::initializeIndicator):
* rendering/RenderBlock.h:
* testing/Internals.cpp:
(WebCore::Internals::TextIndicatorData::TextIndicatorData):
(WebCore::Internals::TextIndicatorData::~TextIndicatorData):
(WebCore::Internals::textIndicatorForRange):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/text-indicator/text-indicator-uses-img-size-inside-picture-expected.txt: Added.
* fast/text-indicator/text-indicator-uses-img-size-inside-picture.html: Added.


Canonical link: https://commits.webkit.org/213081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246695 268f45cc-cd09-0410-ab3c-d52691b4dbfc